kubernetes/platform/openbao/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao
  namespace: openbao
spec:
  ingressClassName: traefik
  rules:
    - host: openbao.ninjatronics.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao
                port:
                  number: 8200
